<resources>
    <string name="app_name">My Afya (Doctor)</string>
    <string name="minimum_password_message">Password too short</string>
    <string name="auth_failed">Log in failed</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="jjjjj">kk</string>
    <string name="weight">Weight</string>
    <string name="exercise_minutes">Exercise Minutes</string>
    <string name="workout">Workout</string>
    <string name="total_workout_time">total workout time</string>
    <string name="medicine">Medicine</string>
    <string name="medicine_taken">Medicine taken</string>
    <string name="fields_required">All fields are required.</string>
    <string name="fetch_error">Error fetching data.</string>


    <string name="default_prefs">com.example.myafyadoctor</string>
</resources>
